welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:1: error: identifier expected but '(' found.
def (dogHouse()){
    ^